# Canvus-Local-LLM

./: .gitignore  PRD.md  QnA.md  README.md  TS-QnA.md  TechStack.md  env.template  notes.md  pyproject.toml  requirements.txt  section-1-issue.md  section-10-issue.md  section-11-issue.md  section-12-issue.md  section-13-issue.md  section-14-issue.md  section-2-issue.md  section-3-issue.md  section-4-issue.md  section-5-issue.md  section-6-issue.md  section-7-issue.md  section-8-issue.md  section-9-issue.md  tasks.md
.cursor/rules/: core.mdc
src/: __init__.py  config.py  exceptions.py  main.py  tray.py
tests/: __init__.py  test_config.py  test_main.py
